Remove Spring and Hibernate